--- a/Vue/vue.html
+++ b/Vue/vue.html
@@ -41,7 +41,7 @@
         /** добавляем метод */
         methods: {
             /** при нажатии — переворачиваем строку задом наперёд и наоборот */
-            reverseMessage: function () {
+            reverseMessage() {
                 /**
                  * в любой момент можно использовать код на JavaScript
                  * 1. разбили строку на набор символов,
